# framework

./: .gitignore  Cargo.toml  LICENSE
honest_validator/: Cargo.toml  README.md
honest_validator/dependencies/: draft.txt
honest_validator/lectures_notes/: draft.txt
honest_validator/mock_data/: mock_validators.json  validator_pubkeys.txt
honest_validator/src/: beacon_node.rs  errors.rs  lib.rs  main.rs  rest_client.rs
honest_validator/src/attestation_producer/: mod.rs
honest_validator/src/block_producer/: lib.rs  mod.rs
honest_validator/src/duties_manager/: mod.rs
honest_validator/src/service/: mod.rs
honest_validator/src/validator_service/: mod.rs
scripts/: ci
types/: Cargo.toml
types/src/: beacon_state.rs  config.rs  consts.rs  lib.rs  primitives.rs  types.rs
utils/bls/src/: lib.rs  signature.rs
utils/eth2_hashing/src/: lib.rs
utils/serde_hex/src/: lib.rs
utils/ssz/src/: lib.rs
utils/ssz_derive/src/: lib.rs
utils/ssz_types/src/: bitfield.rs  lib.rs
utils/tree_hash/src/: lib.rs
utils/tree_hash_derive/src/: lib.rs
