[package]
name = "framework_honest_validator"
version = "0.1.0"
authors = ["Arnas Jozonis, Aurintas Bubinas, Rasa Šmigelskytė"]
edition = "2018"

[[bin]]
name = "validator_client"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
bls = { path = "../utils/bls" }
types = { path = "../types" }
typenum = '1.11.2'
eth2_hashing = { path = "../utils/eth2_hashing"}
eth2_ssz = { path = "../utils/ssz"}
eth2_ssz_types = { path = "../utils/ssz_types"}
tree_hash = { path = "../utils/tree_hash"}
